finished styling FavoriteMovie component

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   --primary-white: #faf9f9;
   --primary-dark-bg: #1b1b1b;
   --modal-bg: #121212;
-  --primary-red: #ef233c;
+  --primary-red: #ff4d60;
   --primary-text: #353535;
   --secondary-text: #282828;
 }
