--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --primary-dark-bg: #1b1b1b;
   --modal-bg: #121212;
   --primary-red: #ff4d60;
+  --secondary-red: #ef233c;
   --primary-text: #353535;
   --secondary-text: #282828;
 }
@@ -39,6 +40,7 @@ main {
 input,
 button {
   font-family: inherit;
+  letter-spacing: inherit;
 }
 
 a {
