--- a/src/index.css
+++ b/src/index.css
@@ -72,3 +72,15 @@ ul {
   font-size: 1.6rem;
   margin-bottom: 1.4rem;
 }
+
+@media screen and (min-width: 768px) {
+  main {
+    padding: 4rem;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  main {
+    padding: 5rem;
+  }
+}
